# VibeCheck

./: CMakeLists.txt  README.md  main.py  requirements.txt  vibeCheckCore.cpp
Frontend/: index.html  package-lock.json  package.json
Frontend/src/: App.jsx  index.css
runs/detect/YOLOv8/yolov8n/: args.yaml
